--- a/BHP/requirements.txt
+++ b/BHP/requirements.txt
@@ -1,119 +1,4 @@
-absl-py==1.4.0
-anyio==3.7.1
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.2.1
-async-lru==2.0.3
-attrs==23.1.0
-Babel==2.12.1
-backcall==0.2.0
-beautifulsoup4==4.12.2
-bleach==6.0.0
-blinker==1.6.2
-certifi==2023.5.7
-cffi==1.15.1
-charset-normalizer==3.2.0
-click==8.1.7
-colorama==0.4.6
-comm==0.1.3
-contourpy==1.1.0
-cycler==0.11.0
-debugpy==1.6.7
-decorator==5.1.1
-defusedxml==0.7.1
-executing==1.2.0
-fastjsonschema==2.17.1
-Flask==2.3.2
-flatbuffers==23.5.26
-fonttools==4.41.1
-fqdn==1.5.1
-idna==3.4
-ipykernel==6.24.0
-ipython==8.14.0
-isoduration==20.11.0
-itsdangerous==2.1.2
-jedi==0.18.2
-Jinja2==3.1.2
-joblib==1.3.1
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.18.4
-jsonschema-specifications==2023.7.1
-jupyter-events==0.6.3
-jupyter-lsp==2.2.0
-jupyter_client==8.3.0
-jupyter_core==5.3.1
-jupyter_server==2.7.0
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.3
-jupyterlab-pygments==0.2.2
-jupyterlab_server==2.23.0
-kiwisolver==1.4.4
-MarkupSafe==2.1.3
-matplotlib==3.7.2
-matplotlib-inline==0.1.6
-mediapipe==0.10.3
-mistune==3.0.1
-nbclient==0.8.0
-nbconvert==7.7.2
-nbformat==5.9.1
-nest-asyncio==1.5.6
-notebook==7.0.0
-notebook_shim==0.2.3
-numpy==1.25.1
-opencv-contrib-python==4.8.0.76
-opencv-python==4.8.0.76
-overrides==7.3.1
-packaging==23.1
-pandas==2.0.3
-pandocfilters==1.5.0
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==10.0.0
-platformdirs==3.9.1
-prometheus-client==0.17.1
-prompt-toolkit==3.0.39
-protobuf==3.20.3
-psutil==5.9.5
-pure-eval==0.2.2
-pycparser==2.21
-Pygments==2.15.1
-pyparsing==3.0.9
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-pytz==2023.3
-pywin32==306
-pywinpty==2.0.11
-PyYAML==6.0.1
-pyzmq==25.1.0
-referencing==0.30.0
-requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.9.2
-scikit-learn==1.3.0
-scipy==1.11.1
-seaborn==0.12.2
-Send2Trash==1.8.2
-six==1.16.0
-sklearn==0.0.post7
-sniffio==1.3.0
-sounddevice==0.4.6
-soupsieve==2.4.1
-speedtest-cli==2.1.3
-stack-data==0.6.2
-terminado==0.17.1
-threadpoolctl==3.2.0
-tinycss2==1.2.1
-tornado==6.3.2
-traitlets==5.9.0
-tzdata==2023.3
-uri-template==1.3.0
-urllib3==2.0.4
-utils==1.0.1
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.6.1
-Werkzeug==2.3.7
+flask
+numpy
+sklearn
+pip==23.2.1
